<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Virtual UT</string>

    <string name="splashscreen">Le portefeuille virtuel des étudiants de l\'UTT</string>
    <string name="auteurs">Made by Adrien Amoros, Driss Bassim Sefiani, Thanh Thuan Trin</string>
    <string name="date">Automne 2013</string>
    <string name="version">Version 1.0</string>

    <string name="welcome_message">Identifiez-vous pour accéder à votre compte.</string>
    <string name="welcome_message_2">Si vous n\'avez pas de compte, veuillez contacter l\'<b>administrateur</b> du service auprès de l\'Université de Technologie de Troyes.</string>
</resources>
